--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Movies Manager</string>
+    <string name="label_you_havent_movies">Você não tem filmes cadastrados</string>
+    <string name="label_add_movie">Adicionar Filme</string>
+    <string name="label_edit_item">Editar item</string>
 </resources>
