--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="label_you_havent_movies">Você não tem filmes cadastrados</string>
     <string name="label_add_movie">Adicionar Filme</string>
     <string name="label_edit_item">Editar item</string>
+    <string name="label_movie_name">Nome do filme</string>
+    <string name="label_movie_genre">Gênero</string>
+    <string name="label_movie_studio">Estúdio ou produtora</string>
+    <string name="label_release_year">Ano</string>
+    <string name="label_movie_duration">Tempo (em min)</string>
+    <string name="label_watched">Já assistiu?</string>
+    <string name="label_movie_score">Nota</string>
+    <string name="label_save">Salvar</string>
 </resources>
