fix(list_movies): added menu layout with options to edit and to delete movie.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="label_watched">Já assistiu?</string>
     <string name="label_movie_score">Nota</string>
     <string name="label_save">Salvar</string>
+    <string name="label_edit_movie">Editar filme</string>
+    <string name="label_remove_movie">Remover filme</string>
 </resources>
