--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="label_save">Salvar</string>
     <string name="label_edit_movie">Editar filme</string>
     <string name="label_remove_movie">Remover filme</string>
+    <string name="label_movie_added">Filme adicionado!</string>
 </resources>
