feat(delete_movie): added functionality to delete a movie.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="label_remove_movie">Remover filme</string>
     <string name="label_movie_added">Filme adicionado!</string>
     <string name="label_movie_changed">Filme alterado!</string>
+    <string name="label_movie_deleted">Filme removido!</string>
 </resources>
