--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="label_movie_added">Filme adicionado!</string>
     <string name="label_movie_changed">Filme alterado!</string>
     <string name="label_movie_deleted">Filme removido!</string>
+    <string name="label_uninformed">Não informado</string>
+    <string name="label_x_minutes">%1$s minutos</string>
+    <string name="label_movie_watched">Assistido</string>
+    <string name="label_movie_not_watched">Não assistido</string>
+    <string name="label_not_yet_rated">Ainda não avaliado</string>
+    <string name="label_detail_score">Nota %1$s</string>
 </resources>
